New-Upload-1755854042013/objects/Page_Access__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Page__c</fullName>
        <label>Apex Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Set Name</label>
        <referenceTo>Permission_Set_Admin__c</referenceTo>
        <relationshipLabel>Page Accesses</relationshipLabel>
        <relationshipName>Page_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Page Accesses</relationshipLabel>
        <relationshipName>Page_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Page Access</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Page Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>